[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["LIANG Qihang"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.0"
langchain-openai = "^0.1.7"
ace = "^0.3.3"
pandas = "^2.2.2"
tiktoken = "^0.7.0"
scikit-learn = "^1.5.0"
transformers = "^4.41.1"
ipywidgets = "^8.1.2"
torch = "^2.3.0"
numpy = "^1.26.4"
sentence-transformers = "^2.7.0"
huggingface-hub = "^0.23.1"
matplotlib = "^3.9.0"
zhconv = "^1.4.3"
chardet = "^5.2.0"
jieba = "^0.42.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
